--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -11,7 +11,7 @@ html {
 
 body {
     min-height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Outfit', sans-serif;
     line-height: 1.3;
     background: $lightGray;
 }
